Integração com o Reinforcement Learning e correção de bugs.

--- a/textil.ipynb
+++ b/textil.ipynb
@@ -105,6 +105,26 @@
     "            broken_machines = sum([not machine.working for machine in self.machines])\n",
     "            print(f\"{broken_machines} broken machines in {self.env.now}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'c:\\Program Files\\Python39\\python.exe' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '\"c:/Program Files/Python39/python.exe\" -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
+   "source": [
+    "dict(type='int', num_values=5)"
+   ]
   }
  ],
  "metadata": {
