--- a/teste.ipynb
+++ b/teste.ipynb
@@ -76,12 +76,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_material</th>\n",
+       "      <th>tipo_material</th>\n",
+       "      <th>due_date</th>\n",
+       "      <th>tempo_processamento_maquina1</th>\n",
+       "      <th>tempo_processamento_maquina2</th>\n",
+       "      <th>tempo_processamento_maquina3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>mat001</td>\n",
+       "      <td>escuro</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>381</td>\n",
+       "      <td>377</td>\n",
+       "      <td>381</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>mat002</td>\n",
+       "      <td>claro</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>371</td>\n",
+       "      <td>361</td>\n",
+       "      <td>356</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>mat003</td>\n",
+       "      <td>escuro</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>485</td>\n",
+       "      <td>364</td>\n",
+       "      <td>444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>mat004</td>\n",
+       "      <td>escuro</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>394</td>\n",
+       "      <td>405</td>\n",
+       "      <td>349</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>mat005</td>\n",
+       "      <td>claro</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>430</td>\n",
+       "      <td>432</td>\n",
+       "      <td>364</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  id_material tipo_material  due_date  tempo_processamento_maquina1  \\\n",
+       "0      mat001        escuro      1000                           381   \n",
+       "1      mat002         claro      1000                           371   \n",
+       "2      mat003        escuro      1000                           485   \n",
+       "3      mat004        escuro      1000                           394   \n",
+       "4      mat005         claro      1000                           430   \n",
+       "\n",
+       "   tempo_processamento_maquina2  tempo_processamento_maquina3  \n",
+       "0                           377                           381  \n",
+       "1                           361                           356  \n",
+       "2                           364                           444  \n",
+       "3                           405                           349  \n",
+       "4                           432                           364  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "import pandas as pd\n",
     "dataset_ordens = pd.read_excel('inputs/dataset_ordens.xlsx')\n",
     "dataset_ordens.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'mat026'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "id_material = dataset_ordens[\"id_material\"]\n",
+    "i = 5\n",
+    "id_material[20+i]"
    ]
   },
   {
@@ -235,6 +358,63 @@
    ],
    "source": [
     "abs(-75)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(pd.DataFrame({\"b\": [0,1,2,3,4,5,6,2,3,4,5,2,1,23,4,2,1]})[\"b\"].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [\"mtt1\", \"mtt2\", \"mtt3\", \"mtt4\"]\n",
+    "print(\"mtt3\" in a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "my_array = [False] * 60\n",
+    "print(my_array)"
    ]
   }
  ],
