Melhorias e finalização dos cenários.

--- a/teste.ipynb
+++ b/teste.ipynb
@@ -416,6 +416,94 @@
     "my_array = [False] * 60\n",
     "print(my_array)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "[4, 5, 6]\n",
+      "[7, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1,2,3,4,5,6,7,8]\n",
+    "NUM_1 = 3\n",
+    "NUM_2 = 3\n",
+    "NUM_3 = 2\n",
+    "\n",
+    "b = a[:NUM_1]\n",
+    "c = a[NUM_1:(NUM_1+NUM_2)]\n",
+    "d = a[(NUM_1+NUM_2):(NUM_1+NUM_2+NUM_3)]\n",
+    "print(b)\n",
+    "print(c)\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "[4, 5, 6]\n",
+      "[7, 8, 9]\n",
+      "[1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1,2,3,4,5,6,7,8,9]\n",
+    "NUM = 3\n",
+    "\n",
+    "b = a[:NUM]\n",
+    "c = a[NUM:NUM*2]\n",
+    "d = a[NUM*2:NUM*3]\n",
+    "print(b)\n",
+    "print(c)\n",
+    "print(d)\n",
+    "e = [b,c,d]\n",
+    "print(e[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1]\n",
+      "[2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = []\n",
+    "a.append(1)\n",
+    "print(a)\n",
+    "a[0] = 2\n",
+    "print(a)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
